refactor(search): require explicit maxDocs bound
Address review feedback:
- drop the parameterless SearchEngine constructor; maxDocs is an
  absolute collection cap, not a page window, so callers must size it
- default the maxresults API parameter to hitsPerPage * cachePages
  instead of a hardcoded 1000
- throw IllegalStateException from results() when no search succeeded
  and document the lifecycle in the class javadoc
- use Math.clamp() for the collector and page size computations