@@ -36,6 +36,7 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import org.apache.lucene.search.Query;
 import org.opengrok.indexer.configuration.Project;
+import org.opengrok.indexer.configuration.RuntimeEnvironment;
 import org.opengrok.indexer.search.Hit;
 import org.opengrok.indexer.search.SearchEngine;
 import org.opengrok.indexer.web.QueryParameters;
@@ -59,7 +60,6 @@ public class SearchController {
 
     public static final String PATH = "search";
 
-    private static final int MAX_RESULTS = 1000;
     private static final String DEFAULT_SORT_ORDER = "relevancy";
 
     private final SuggesterService suggester;
@@ -82,15 +82,22 @@ public class SearchController {
             @QueryParam(QueryParameters.HIST_SEARCH_PARAM) final String hist,
             @QueryParam(QueryParameters.TYPE_SEARCH_PARAM) final String type,
             @QueryParam("projects") final List<String> projects,
-            @QueryParam(QueryParameters.MAXRESULTS_PARAM)
-            @DefaultValue(MAX_RESULTS + "") final int maxResults,
+            @QueryParam(QueryParameters.MAXRESULTS_PARAM) final Integer maxResultsParam,
             @QueryParam(QueryParameters.START_PARAM) @DefaultValue(0 + "") final int startDocIndex,
             @QueryParam(QueryParameters.SORT_PARAM) @DefaultValue(DEFAULT_SORT_ORDER) final String sort,
             @QueryParam(QueryParameters.MAXHITSPERFILE_PARAM) @DefaultValue("0") final int maxHitsPerFile
     ) {
-        if (maxResults < 0 || startDocIndex < 0 || maxHitsPerFile < 0) {
+        if ((maxResultsParam != null && maxResultsParam < 0) || startDocIndex < 0 || maxHitsPerFile < 0) {
             throw new WebApplicationException("Negative integer parameters are not allowed",
                     Response.Status.BAD_REQUEST);
+        }
+
+        final int maxResults;
+        if (maxResultsParam != null) {
+            maxResults = maxResultsParam;
+        } else {
+            RuntimeEnvironment env = RuntimeEnvironment.getInstance();
+            maxResults = env.getHitsPerPage() * env.getCachePages();
         }
 
         final int maxDocs;
@@ -121,7 +128,7 @@ public class SearchController {
 
             long duration = Duration.between(startTime, Instant.now()).toMillis();
 
-            int pageSize = Math.min(maxResults, Math.max(0, engine.numResults - startDocIndex));
+            int pageSize = Math.clamp(engine.numResults - startDocIndex, 0, maxResults);
             int endDocument = pageSize > 0 ? startDocIndex + pageSize - 1 : startDocIndex;
 
             return new SearchResult(duration, engine.numResults, hits, startDocIndex, endDocument);
@@ -173,7 +180,7 @@ public class SearchController {
             }
             numResults = engine.getTotalHits();
 
-            if (startDocIndex > collected) {
+            if (startDocIndex >= collected) {
                 return Collections.emptyList();
             }
 
